welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-5: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:5: error: not found: value int
	int = false
        ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
	for(k <- 0 to 6){
              ^